mongo-db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: mongo-db
  name: mongo-db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: mongo-db
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        io.kompose.network/project2-appnetwork: "true"
        io.kompose.service: mongo-db
    spec:
      containers:
        - image: mongo:4.4-bionic
          name: mongo-db
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
      restartPolicy: Always
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data
status: {}
