analytics-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: analytics
  name: analytics
spec:
  type: LoadBalancer
  loadBalancerIP: 35.232.189.61
  ports:
    - name: "8100"
      port: 8100
      targetPort: 8100
  selector:
    io.kompose.service: analytics
status:
  loadBalancer: {}
