auth-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: auth
  name: auth
spec:
  ports:
    - name: "8090"
      port: 8090
      targetPort: 8090
  selector:
    io.kompose.service: auth
status:
  loadBalancer: {}
