data_entry-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: data-entry
  name: data-entry
spec:
  type: LoadBalancer
  loadBalancerIP: 35.232.189.61
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: data-entry
status:
  loadBalancer: {}
