mongo-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mongo-db
  name: mongo-db
spec:
  type: LoadBalancer
  loadBalancerIP: 35.232.189.61
  ports:
    - name: "27017"
      port: 27017
      targetPort: 27017
  selector:
    io.kompose.service: mongo-db
status:
  loadBalancer: {}
