mysql-db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: mysql-db
  name: mysql-db
spec:
  ports:
    - name: "3307"
      port: 3307
      targetPort: 3306
  selector:
    io.kompose.service: mysql-db
status:
  loadBalancer: {}
