show_result-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: show-result
  name: show-result
spec:
  type: LoadBalancer
  ports:
    - name: "3000"
      port: 3000
      targetPort: 3000
  selector:
    io.kompose.service: show-result
status:
  loadBalancer: {}
